G/Parser.output
   0  $accept : %entry% $end

   1  Prog : FunDecs EOF

   2  FunDecs : Type Sid LPAR Decs RPAR Stat FunDecs
   3          |

   4  Type : INT
   5       | CHAR

   6  Decs : Decs1 Dec
   7       |

   8  Decs1 : Decs1 Dec SEMICOLON
   9        |

  10  Dec : Type Sids

  11  Sid : ID
  12      | REF ID

  13  Sids : Sid COMMA Sids
  14       | Sid

  15  Stat : Exp SEMICOLON
  16       | IF LPAR Exp RPAR Stat
  17       | IF LPAR Exp RPAR Stat ELSE Stat
  18       | WHILE LPAR Exp RPAR Stat
  19       | RETURN Exp SEMICOLON
  20       | LBLOCK Decs Stats RBLOCK

  21  Stats : Stat COMMA Stats
  22        | Stat

  23  Exp : NUM
  24      | STRINGCONST
  25      | CHARCONST
  26      | Lval
  27      | Lval ASSIGN Exp
  28      | Exp PLUS Exp
  29      | Exp MINUS Exp
  30      | Exp EQUAL Exp
  31      | Exp LESS Exp
  32      | ID LPAR Exps RPAR
  33      | LPAR Exp RPAR

  34  Exps :
  35       | Exps1

  36  Exps1 : Exp
  37        | Exp COMMA Exps

  38  Lval : ID
  39       | ID REF
  40       | ID LBRACKET Exp RBRACKET

  41  %entry% : '\001' Prog

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . Prog  (41)
	FunDecs : .  (3)

	CHAR  shift 3
	INT  shift 4
	EOF  reduce 3

	Prog  goto 5
	FunDecs  goto 6
	Type  goto 7


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	Type : CHAR .  (5)

	.  reduce 5


state 4
	Type : INT .  (4)

	.  reduce 4


state 5
	%entry% : '\001' Prog .  (41)

	.  reduce 41


state 6
	Prog : FunDecs . EOF  (1)

	EOF  shift 8
	.  error


state 7
	FunDecs : Type . Sid LPAR Decs RPAR Stat FunDecs  (2)

	ID  shift 9
	REF  shift 10
	.  error

	Sid  goto 11


state 8
	Prog : FunDecs EOF .  (1)

	.  reduce 1


state 9
	Sid : ID .  (11)

	.  reduce 11


state 10
	Sid : REF . ID  (12)

	ID  shift 12
	.  error


state 11
	FunDecs : Type Sid . LPAR Decs RPAR Stat FunDecs  (2)

	LPAR  shift 13
	.  error


state 12
	Sid : REF ID .  (12)

	.  reduce 12


state 13
	FunDecs : Type Sid LPAR . Decs RPAR Stat FunDecs  (2)
	Decs : .  (7)
	Decs1 : .  (9)

	CHAR  reduce 9
	INT  reduce 9
	RPAR  reduce 7

	Decs  goto 14
	Decs1  goto 15


state 14
	FunDecs : Type Sid LPAR Decs . RPAR Stat FunDecs  (2)

	RPAR  shift 16
	.  error


state 15
	Decs : Decs1 . Dec  (6)
	Decs1 : Decs1 . Dec SEMICOLON  (8)

	CHAR  shift 3
	INT  shift 4
	.  error

	Type  goto 17
	Dec  goto 18


state 16
	FunDecs : Type Sid LPAR Decs RPAR . Stat FunDecs  (2)

	CHARCONST  shift 19
	ID  shift 20
	IF  shift 21
	LBLOCK  shift 22
	LPAR  shift 23
	NUM  shift 24
	RETURN  shift 25
	STRINGCONST  shift 26
	WHILE  shift 27
	.  error

	Exp  goto 28
	Lval  goto 29
	Stat  goto 30


state 17
	Dec : Type . Sids  (10)

	ID  shift 9
	REF  shift 10
	.  error

	Sid  goto 31
	Sids  goto 32


state 18
	Decs : Decs1 Dec .  (6)
	Decs1 : Decs1 Dec . SEMICOLON  (8)

	SEMICOLON  shift 33
	CHARCONST  reduce 6
	ID  reduce 6
	IF  reduce 6
	LBLOCK  reduce 6
	LPAR  reduce 6
	NUM  reduce 6
	RETURN  reduce 6
	RPAR  reduce 6
	STRINGCONST  reduce 6
	WHILE  reduce 6


state 19
	Exp : CHARCONST .  (25)

	.  reduce 25


state 20
	Exp : ID . LPAR Exps RPAR  (32)
	Lval : ID .  (38)
	Lval : ID . REF  (39)
	Lval : ID . LBRACKET Exp RBRACKET  (40)

	LBRACKET  shift 34
	LPAR  shift 35
	REF  shift 36
	ASSIGN  reduce 38
	COMMA  reduce 38
	EQUAL  reduce 38
	LESS  reduce 38
	MINUS  reduce 38
	PLUS  reduce 38
	RBRACKET  reduce 38
	RPAR  reduce 38
	SEMICOLON  reduce 38


state 21
	Stat : IF . LPAR Exp RPAR Stat  (16)
	Stat : IF . LPAR Exp RPAR Stat ELSE Stat  (17)

	LPAR  shift 37
	.  error


state 22
	Stat : LBLOCK . Decs Stats RBLOCK  (20)
	Decs : .  (7)
	Decs1 : .  (9)

	CHAR  reduce 9
	CHARCONST  reduce 7
	ID  reduce 7
	IF  reduce 7
	INT  reduce 9
	LBLOCK  reduce 7
	LPAR  reduce 7
	NUM  reduce 7
	RETURN  reduce 7
	STRINGCONST  reduce 7
	WHILE  reduce 7

	Decs  goto 38
	Decs1  goto 15


state 23
	Exp : LPAR . Exp RPAR  (33)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 39
	Lval  goto 29


state 24
	Exp : NUM .  (23)

	.  reduce 23


state 25
	Stat : RETURN . Exp SEMICOLON  (19)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 40
	Lval  goto 29


state 26
	Exp : STRINGCONST .  (24)

	.  reduce 24


state 27
	Stat : WHILE . LPAR Exp RPAR Stat  (18)

	LPAR  shift 41
	.  error


state 28
	Stat : Exp . SEMICOLON  (15)
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . EQUAL Exp  (30)
	Exp : Exp . LESS Exp  (31)

	EQUAL  shift 42
	LESS  shift 43
	MINUS  shift 44
	PLUS  shift 45
	SEMICOLON  shift 46
	.  error


state 29
	Exp : Lval .  (26)
	Exp : Lval . ASSIGN Exp  (27)

	ASSIGN  shift 47
	COMMA  reduce 26
	EQUAL  reduce 26
	LESS  reduce 26
	MINUS  reduce 26
	PLUS  reduce 26
	RBRACKET  reduce 26
	RPAR  reduce 26
	SEMICOLON  reduce 26


state 30
	FunDecs : Type Sid LPAR Decs RPAR Stat . FunDecs  (2)
	FunDecs : .  (3)

	CHAR  shift 3
	INT  shift 4
	EOF  reduce 3

	FunDecs  goto 48
	Type  goto 7


state 31
	Sids : Sid . COMMA Sids  (13)
	Sids : Sid .  (14)

	COMMA  shift 49
	CHARCONST  reduce 14
	ID  reduce 14
	IF  reduce 14
	LBLOCK  reduce 14
	LPAR  reduce 14
	NUM  reduce 14
	RETURN  reduce 14
	RPAR  reduce 14
	SEMICOLON  reduce 14
	STRINGCONST  reduce 14
	WHILE  reduce 14


state 32
	Dec : Type Sids .  (10)

	.  reduce 10


state 33
	Decs1 : Decs1 Dec SEMICOLON .  (8)

	.  reduce 8


state 34
	Lval : ID LBRACKET . Exp RBRACKET  (40)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 50
	Lval  goto 29


state 35
	Exp : ID LPAR . Exps RPAR  (32)
	Exps : .  (34)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	RPAR  reduce 34

	Exp  goto 51
	Exps  goto 52
	Exps1  goto 53
	Lval  goto 29


state 36
	Lval : ID REF .  (39)

	.  reduce 39


state 37
	Stat : IF LPAR . Exp RPAR Stat  (16)
	Stat : IF LPAR . Exp RPAR Stat ELSE Stat  (17)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 54
	Lval  goto 29


state 38
	Stat : LBLOCK Decs . Stats RBLOCK  (20)

	CHARCONST  shift 19
	ID  shift 20
	IF  shift 21
	LBLOCK  shift 22
	LPAR  shift 23
	NUM  shift 24
	RETURN  shift 25
	STRINGCONST  shift 26
	WHILE  shift 27
	.  error

	Exp  goto 28
	Lval  goto 29
	Stat  goto 55
	Stats  goto 56


state 39
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . EQUAL Exp  (30)
	Exp : Exp . LESS Exp  (31)
	Exp : LPAR Exp . RPAR  (33)

	EQUAL  shift 42
	LESS  shift 43
	MINUS  shift 44
	PLUS  shift 45
	RPAR  shift 57
	.  error


state 40
	Stat : RETURN Exp . SEMICOLON  (19)
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . EQUAL Exp  (30)
	Exp : Exp . LESS Exp  (31)

	EQUAL  shift 42
	LESS  shift 43
	MINUS  shift 44
	PLUS  shift 45
	SEMICOLON  shift 58
	.  error


state 41
	Stat : WHILE LPAR . Exp RPAR Stat  (18)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 59
	Lval  goto 29


state 42
	Exp : Exp EQUAL . Exp  (30)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 60
	Lval  goto 29


state 43
	Exp : Exp LESS . Exp  (31)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 61
	Lval  goto 29


state 44
	Exp : Exp MINUS . Exp  (29)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 62
	Lval  goto 29


state 45
	Exp : Exp PLUS . Exp  (28)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 63
	Lval  goto 29


state 46
	Stat : Exp SEMICOLON .  (15)

	.  reduce 15


state 47
	Exp : Lval ASSIGN . Exp  (27)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 64
	Lval  goto 29


state 48
	FunDecs : Type Sid LPAR Decs RPAR Stat FunDecs .  (2)

	.  reduce 2


state 49
	Sids : Sid COMMA . Sids  (13)

	ID  shift 9
	REF  shift 10
	.  error

	Sid  goto 31
	Sids  goto 65


state 50
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . EQUAL Exp  (30)
	Exp : Exp . LESS Exp  (31)
	Lval : ID LBRACKET Exp . RBRACKET  (40)

	EQUAL  shift 42
	LESS  shift 43
	MINUS  shift 44
	PLUS  shift 45
	RBRACKET  shift 66
	.  error


state 51
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . EQUAL Exp  (30)
	Exp : Exp . LESS Exp  (31)
	Exps1 : Exp .  (36)
	Exps1 : Exp . COMMA Exps  (37)

	COMMA  shift 67
	EQUAL  shift 42
	LESS  shift 43
	MINUS  shift 44
	PLUS  shift 45
	RPAR  reduce 36


state 52
	Exp : ID LPAR Exps . RPAR  (32)

	RPAR  shift 68
	.  error


state 53
	Exps : Exps1 .  (35)

	.  reduce 35


state 54
	Stat : IF LPAR Exp . RPAR Stat  (16)
	Stat : IF LPAR Exp . RPAR Stat ELSE Stat  (17)
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . EQUAL Exp  (30)
	Exp : Exp . LESS Exp  (31)

	EQUAL  shift 42
	LESS  shift 43
	MINUS  shift 44
	PLUS  shift 45
	RPAR  shift 69
	.  error


state 55
	Stats : Stat . COMMA Stats  (21)
	Stats : Stat .  (22)

	COMMA  shift 70
	RBLOCK  reduce 22


state 56
	Stat : LBLOCK Decs Stats . RBLOCK  (20)

	RBLOCK  shift 71
	.  error


state 57
	Exp : LPAR Exp RPAR .  (33)

	.  reduce 33


state 58
	Stat : RETURN Exp SEMICOLON .  (19)

	.  reduce 19


state 59
	Stat : WHILE LPAR Exp . RPAR Stat  (18)
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . EQUAL Exp  (30)
	Exp : Exp . LESS Exp  (31)

	EQUAL  shift 42
	LESS  shift 43
	MINUS  shift 44
	PLUS  shift 45
	RPAR  shift 72
	.  error


state 60
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . EQUAL Exp  (30)
	Exp : Exp EQUAL Exp .  (30)
	Exp : Exp . LESS Exp  (31)

	MINUS  shift 44
	PLUS  shift 45
	COMMA  reduce 30
	EQUAL  reduce 30
	LESS  reduce 30
	RBRACKET  reduce 30
	RPAR  reduce 30
	SEMICOLON  reduce 30


state 61
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . EQUAL Exp  (30)
	Exp : Exp . LESS Exp  (31)
	Exp : Exp LESS Exp .  (31)

	MINUS  shift 44
	PLUS  shift 45
	COMMA  reduce 31
	EQUAL  reduce 31
	LESS  reduce 31
	RBRACKET  reduce 31
	RPAR  reduce 31
	SEMICOLON  reduce 31


state 62
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp MINUS Exp .  (29)
	Exp : Exp . EQUAL Exp  (30)
	Exp : Exp . LESS Exp  (31)

	COMMA  reduce 29
	EQUAL  reduce 29
	LESS  reduce 29
	MINUS  reduce 29
	PLUS  reduce 29
	RBRACKET  reduce 29
	RPAR  reduce 29
	SEMICOLON  reduce 29


state 63
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp PLUS Exp .  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . EQUAL Exp  (30)
	Exp : Exp . LESS Exp  (31)

	COMMA  reduce 28
	EQUAL  reduce 28
	LESS  reduce 28
	MINUS  reduce 28
	PLUS  reduce 28
	RBRACKET  reduce 28
	RPAR  reduce 28
	SEMICOLON  reduce 28


state 64
	Exp : Lval ASSIGN Exp .  (27)
	Exp : Exp . PLUS Exp  (28)
	Exp : Exp . MINUS Exp  (29)
	Exp : Exp . EQUAL Exp  (30)
	Exp : Exp . LESS Exp  (31)

	EQUAL  shift 42
	LESS  shift 43
	MINUS  shift 44
	PLUS  shift 45
	COMMA  reduce 27
	RBRACKET  reduce 27
	RPAR  reduce 27
	SEMICOLON  reduce 27


state 65
	Sids : Sid COMMA Sids .  (13)

	.  reduce 13


state 66
	Lval : ID LBRACKET Exp RBRACKET .  (40)

	.  reduce 40


state 67
	Exps1 : Exp COMMA . Exps  (37)
	Exps : .  (34)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	RPAR  reduce 34

	Exp  goto 51
	Exps  goto 73
	Exps1  goto 53
	Lval  goto 29


state 68
	Exp : ID LPAR Exps RPAR .  (32)

	.  reduce 32


state 69
	Stat : IF LPAR Exp RPAR . Stat  (16)
	Stat : IF LPAR Exp RPAR . Stat ELSE Stat  (17)

	CHARCONST  shift 19
	ID  shift 20
	IF  shift 21
	LBLOCK  shift 22
	LPAR  shift 23
	NUM  shift 24
	RETURN  shift 25
	STRINGCONST  shift 26
	WHILE  shift 27
	.  error

	Exp  goto 28
	Lval  goto 29
	Stat  goto 74


state 70
	Stats : Stat COMMA . Stats  (21)

	CHARCONST  shift 19
	ID  shift 20
	IF  shift 21
	LBLOCK  shift 22
	LPAR  shift 23
	NUM  shift 24
	RETURN  shift 25
	STRINGCONST  shift 26
	WHILE  shift 27
	.  error

	Exp  goto 28
	Lval  goto 29
	Stat  goto 55
	Stats  goto 75


state 71
	Stat : LBLOCK Decs Stats RBLOCK .  (20)

	.  reduce 20


state 72
	Stat : WHILE LPAR Exp RPAR . Stat  (18)

	CHARCONST  shift 19
	ID  shift 20
	IF  shift 21
	LBLOCK  shift 22
	LPAR  shift 23
	NUM  shift 24
	RETURN  shift 25
	STRINGCONST  shift 26
	WHILE  shift 27
	.  error

	Exp  goto 28
	Lval  goto 29
	Stat  goto 76


state 73
	Exps1 : Exp COMMA Exps .  (37)

	.  reduce 37


state 74
	Stat : IF LPAR Exp RPAR Stat .  (16)
	Stat : IF LPAR Exp RPAR Stat . ELSE Stat  (17)

	ELSE  shift 77
	CHAR  reduce 16
	COMMA  reduce 16
	EOF  reduce 16
	INT  reduce 16
	RBLOCK  reduce 16


state 75
	Stats : Stat COMMA Stats .  (21)

	.  reduce 21


state 76
	Stat : WHILE LPAR Exp RPAR Stat .  (18)

	.  reduce 18


state 77
	Stat : IF LPAR Exp RPAR Stat ELSE . Stat  (17)

	CHARCONST  shift 19
	ID  shift 20
	IF  shift 21
	LBLOCK  shift 22
	LPAR  shift 23
	NUM  shift 24
	RETURN  shift 25
	STRINGCONST  shift 26
	WHILE  shift 27
	.  error

	Exp  goto 28
	Lval  goto 29
	Stat  goto 78


state 78
	Stat : IF LPAR Exp RPAR Stat ELSE Stat .  (17)

	.  reduce 17


29 terminals, 16 nonterminals
42 grammar rules, 79 states
